@@ -1,5 +1,10 @@
 2002-06-07  John Levon  <moz@compsoc.man.ac.uk>
 
+	* pp/opp_symbol.cpp: kill last of the accursed char
+	  arrays
+
+2002-06-07  John Levon  <moz@compsoc.man.ac.uk>
+
 	* libutil++/op_bfd.cpp:
 	* libutil++/op_bfd.h:
 	* libutil++/verbose_ostream.h:
